# sysrepo-plugin-ietf-system

./: CMakeLists.txt  project.config
debian/: control  lintian-overrides  rules
